Gradle config for image installer builder